docs: create push notifications doc (#209)
